# hackathon-aidoc

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yaml  tika-config.xml
functions/: chart.py
open-webui-data/: config.json  functions.json  models.json
parse/: .gitignore  main.py  pyproject.toml  tables_data.xlsx
smart-extraction/: main.py  pyproject.toml
smart-extraction/experiments/: solution.ipynb
smart-extraction/models/: __init__.py  tatr.py  yolo.py
smart-extraction/processing/: __init__.py
smart-extraction/tables_extraction/: main.py
smart-extraction/tables_extraction/models/: tatr.py  yolo.py
smart-extraction/tables_extraction/processing/: deskewer.py  image.py  ocr.py
