[tool.poetry]
name = "parse"
version = "0.1.0"
description = ""
authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
